StarlightStage/main.css
/* Header */
#header {
    border: 0;
    height: 200px;
    background-color: #010c2a;
    background-image: url(%%banner%%);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: right center;
}
@media (max-width: 860px) {
    #header {
        background-size: cover;
        background-position: center;
    }
}
#header-img {
    height: 195px;
}
.pagename {
    position: absolute;
    top: 30px;
    height: 140px;
    width: 480px;
    
    background-image: url(%%logo%%);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: left center;
    
    font-size: 0;
}
.pagename>a {
    position: absolute;
    z-index: 100;
    
    height: 140px;
    width: 450px;
}

/* Categories */
.tabmenu li a {
    background-color: #48a2e1;
    background-color: rgba(72,162,225,.85);
    color: white;
    border-radius: 4px 4px 0 0;
    font-weight: normal;
}

/* Top bar */
#sr-header-area {
    margin-bottom: -18px;
    border: 0;
    background-color: #48a2e1;
    background-color: rgba(72,162,225,.95);
    box-shadow: 0 0 4px black;
}
#sr-header-area a,
#sr-header-area span,
#sr-header-area .selected a {
    color: white;
}
#sr-more-link {
    background-color: #48a2e1;
}
div#RESShortcutsEditContainer {
    background-color: transparent;
}
#RESShortcutsEditContainer>div {
    background-color: transparent;
    color: white;
}

/* Userbar */
div#header-bottom-right {
    /* Fix RES hard-coding dumb values */
    top: inherit;
    bottom: 0;
}

/* Sidebar */
.titlebox>.subscribers>.number:after {
    content: " Producers";
}
.titlebox>.subscribers>.word {
    display: none;
}


/* Spoiler Code
 * Usage: [spoiler](#s "up up down down left right left right bee ayy")
 */

a[href="#s"],
.md p > a[href="#s"] {
    text-decoration: none !important;
    cursor: default;
    background: #000;
    color: #fff !important;
    display: inline-block;
}
a[href="#s"]::after,
.md p > a[href="#s"]::after {
    content: attr(title);
    color: #000;
    padding: 0 0.5em;
    visibility: visible;
}
a[href="#s"]:hover,
.md p > a[href="#s"]:hover {
    color: #fff !important;
}
a[href="#s"]:hover::after,
a[href="#s"]:active::after,
.md p > a[href="#s"]:hover::after,
.md p > a[href="#s"]:active::after {
    color: #fff;
}


/* Announcement bar */
div.content {
    margin-top:60px;
}
.titlebox form {
    position: static;
}
.side h3:nth-of-type(1) {
    /*this code positions the sticky*/
    position: absolute;
    display: block;
    top: 200px;
    left: 40px;
    font-size: 14px!important;
    
    /*this code styles the sticky*/
    color: #555555;
    text-align: left;
    /*margin: 15px 15px 0px 15px;*/
    margin-top: 15px;
    border-radius: 8px;
    width: 60%;
    padding: 0; /*10px 0px 15px 59px*/
    
    
    /*prevent iOS from scaling the text to cover post information*/
    -webkit-text-size-adjust: 100%;
}

/* Flairs */
.flair {
    border: none !important;
    text-indent: -9999px;
    overflow: hidden;
    padding: 0px;
    background: url(%%flairs%%) no-repeat -9999px -9999px;
    background-repeat: no-repeat;
    display: inline-block;
    border-radius: 8px;
    width: 40px;
    height: 40px;
}
.link .flair, .entry .tagline .flair {
    float: left;
}

.flair-airi-pp { background-position: -1px -1px; }
.flair-anzu-lk { background-position: -43px -1px; }
.flair-chieri-yc { background-position: -85px -1px; }
.flair-fumika-bm { background-position: -1px -43px; }
.flair-kanako-ww { background-position: -43px -43px; }
.flair-kirari-gp { background-position: -85px -43px; }
.flair-miku-cp { background-position: -1px -85px; }
.flair-minami-nv { background-position: -43px -85px; }
.flair-mio-som { background-position: -85px -85px; }
.flair-ranko-dpor { background-position: -127px -1px; }
.flair-riina-hb { background-position: -127px -43px; }
.flair-rika-sd { background-position: -127px -85px; }
.flair-rin-som { background-position: -1px -127px; }
.flair-uzuki-som { background-position: -43px -127px; }
.flair-kitty { width: 61px; background-position: -85px -127px; }

